--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.7",
     "@mui/system": "^5.11.8",
+    "antd": "^3.26.20",
     "apisauce": "^2.1.6",
     "bootstrap": "^5.2.3",
     "cheerio": "^1.0.0-rc.12",
